Almost ready. Knyazeva Viktoriya

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Viktoriya Knyazeva">
     <title>Application</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 
